--- a/Css/Style.css
+++ b/Css/Style.css
@@ -4,10 +4,162 @@
 }
 body {
   background-color: #8d8b8b88;
+  /* width: 1330px; */
 }
 #header {
   height: 70px;
+  /* margin-left: 10px; */
   background-color: white;
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
+  position: sticky;
+  top: 0;
+}
+.logo {
+  padding-left: 10px;
+  margin-bottom: 0%;
+}
+.logo img {
+  height: 22px;
+  width: 130px;
+  margin-left: 15px;
+  margin-bottom: 0;
+}
+.flipkart-plus {
+  margin-left: 70px;
+  font-style: italic;
+  color: #9e9e9e;
+  font-weight: bold;
+  margin-top: 0;
+}
+.flipkart-plus span {
+  font-size: 19px;
+  color: #ffc200;
+}
+.header_search_box {
+  width: 600px;
+  height: 40px;
+  background-color: aliceblue;
+  border-radius: 4px;
+  display: grid;
+  grid-template-columns: 1fr 10fr;
+}
+.header_search_box i {
+  font-size: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.header_search_box input {
+  background-color: transparent;
+  border-style: none;
+  font-size: 15px;
+  font-weight: 600;
+}
+.header_icon_link_content a {
+  font-size: 17px;
+  text-decoration: none;
+  color: #333;
+}
+.header_icon_link_content a i {
+  font-size: 22px;
+  margin-right: 4px;
+}
+
+#nav {
+  width: 1330px;
+  height: 126px;
+  background-color: white;
+  display: flex;
+  margin-left: 15px;
+  margin-top: 10px;
+  border-radius: 5px;
+  justify-content: space-evenly;
+}
+
+.nav_content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  list-style: none;
+}
+
+.nav_content_main {
+  /* display: flex;
+    justify-content: center;
+    align-items: center; */
+  text-decoration: none;
+  text-align: center;
+  margin-left: 20px;
+}
+.nav_content_main_content span {
+  font-size: 15px;
+  color: #333;
+  font-weight: bold;
+  /* text-align: center; */
+}
+#ads {
+  width: 1330px;
+  height: 126px;
+  background-color: white;
+  margin-left: 15px;
+  margin-top: 30px;
+  border-radius: 5px;
+  /* padding-top: 25px; */
+  margin-bottom: 15px;
+}
+#ads img {
+  margin-left: 330px;
+  margin-top: 30px;
+}
+#flipkart_carousel {
+  width: 1330px;
+  height: 200px;
+  background-color: white;
+  margin-left: 15px;
+  margin-right: 20px;
+  margin-top: 10px;
+  border-radius: 5px;
+}
+#main {
+  display: grid;
+  grid-template-columns: 10fr 2fr;
+  background-color: #fff;
+  height: 300px;
+  width: 1330px;
+  margin-top: 30px;
+  padding: 5px;
+  margin-left: 15px;
+}
+#footer {
+  display: grid;
+  grid-template-columns: 6fr 6fr;
+  height: 250px;
+  background-color: rgb(24, 20, 20);
+}
+#copyright_payment {
+  bottom: 0;
+  height: 60px;
+  background-color: rgb(24, 20, 20);
+  border-top: 0.5px solid rgb(194, 194, 194);
+}
+.copyright_payment-content{
+  display: flex;
+  justify-content: space-evenly;  
+  margin-top: 20px;
+}
+.copyright_payment-content li{
+    list-style: none;  
+}
+.copyright_payment-content a{
+   font-size: 12px;
+   color: #ffffff;
+   text-decoration: none;
+   text-align: center;
+}
+.copyright_payment-content li i{
+    color: rgb(230, 230, 125);  
+    padding-right: 5px;
 }
