--- a/Css/Style.css
+++ b/Css/Style.css
@@ -194,9 +194,10 @@ body {
   text-align: left;
 }
 .content ol p{
-  margin-bottom: 5px;
+  margin-bottom: 2px;
   font-size: 12px;
-  font-weight: bold;
+  /* font-weight: bold; */
+
   
 }
 
@@ -227,3 +228,4 @@ body {
     color: rgb(230, 230, 125);  
     padding-right: 5px;
 }
+
