--- a/Css/Style.css
+++ b/Css/Style.css
@@ -14,7 +14,6 @@ body {
 
 #header {
   height: 70px;
-  /* margin-left: 10px; */
   background-color: white;
   display: flex;
   justify-content: space-evenly;
@@ -77,11 +76,12 @@ body {
 /* navbar design  */
 
 #nav {
-  width: 1330px;
+  /* width: 1330px; */
   height: 126px;
   background-color: white;
   display: flex;
   margin-left: 15px;
+  margin-right: 15px;
   margin-top: 10px;
   border-radius: 5px;
   justify-content: space-evenly;
@@ -113,10 +113,11 @@ body {
 /* ads design  */
 
 #ads {
-  width: 1330px;
+  /* width: 1330px; */
   height: 126px;
   background-color: white;
   margin-left: 15px;
+  margin-right: 15px;
   margin-top: 30px;
   border-radius: 5px;
   /* padding-top: 25px; */
@@ -129,11 +130,11 @@ body {
 /* flipkart sliders design  */
 
 #flipkart_carousel {
-  width: 1330px;
+  /* width: 1330px; */
   height: 200px;
   background-color: white;
   margin-left: 15px;
-  margin-right: 20px;
+  margin-right: 15px;
   margin-top: 10px;
   border-radius: 5px;
 }
@@ -149,12 +150,33 @@ body {
   margin-left: 15px;
 }
 
+/* top story directory setup  */
+
+#top_story_directory{
+  /* width: 1330px; */
+  height: 1780px;
+
+}
+.top_story_directory_content{
+  font-size: 12px;
+  color: #565656;
+  margin-bottom: 4px 0px; 
+}
+.top_story_directory_content p{
+  margin-left: 10px ;
+}
+.top_story_directory_content p span{
+  font-size: 15px;
+   color: #565656;
+}
+
 /* fotter css design */
 #footer {
   display: grid;
   grid-template-columns: 7fr 5fr;
   height: 250px;
   background-color: rgb(24, 20, 20);
+  
 }
 /* box1 design  */
 .box1{
