--- a/Css/Style.css
+++ b/Css/Style.css
@@ -14,6 +14,7 @@ body {
 
 #header {
   height: 70px;
+  width: 100%;
   background-color: white;
   display: flex;
   justify-content: space-evenly;
